--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0' // material design
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0' // retofit
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0' //scalar converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0' //gson converter
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
 
 }
