--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0' //scalar converter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0' //gson converter
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0' // circular image view
 
 }
