--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activity.AddQuestionScreen"></activity>
+        <activity android:name=".Activity.QuizDetailsScreen" />
         <activity android:name=".Activity.AdminHomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.loginActivity">
-        </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Activity.loginActivity" />
+        <activity android:name=".MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
