--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.StudentHomeScreenActivity">
-        </activity>
-        <activity android:name=".Activity.StudentLoginActivity">
-        <activity android:name=".Activity.NewQuizDetailsScreen"></activity>
-        <activity android:name=".Activity.AddQuestionScreen">
-        </activity>
-        <activity android:name=".Activity.QuizDetailsScreen" />
-        <activity android:name=".Activity.AdminHomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Activity.AddQuestionScreen" />
+        <activity android:name=".Activity.StudentLoginActivity"/>
+        <activity android:name=".Activity.NewQuizDetailsScreen"></activity>
+        <activity android:name=".Activity.AddQuestionScreen">
+        </activity>
         <activity android:name=".Activity.QuizDetailsScreen" />
-        <activity android:name=".Activity.AdminHomeScreen"></activity>
+        <activity android:name=".Activity.AdminHomeScreen">
+
         </activity>
         <activity android:name=".Activity.loginActivity" />
         <activity android:name=".MainActivity" />
