--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'com.chaquo.python'
+}
 
 android {
     compileSdkVersion 30
@@ -6,12 +9,36 @@ android {
 
     defaultConfig {
         applicationId "com.Project.OMRReader"
+
+        python {
+            pip {
+                install "numpy"
+                install "opencv-python"
+                install "pybase64"
+                install "pillow"
+            }
+        }
+
+        //Path for python scripts
+        sourceSets{
+            main{
+                python{
+                    srcDirs = ["src/main/python"]
+                }
+            }
+        }
+
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //ABI for python
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
 
     buildTypes {
@@ -30,12 +57,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
     implementation 'com.google.android.material:material:1.1.0' // material design
     implementation 'com.squareup.retrofit2:retrofit:2.5.0' // retofit
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0' //scalar converter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0' //gson converter
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0' // circular image view
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'//graph
 
 }
