--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.Project.OMRReader">
-
-
-    <!--let external entity like play store know that the app uses camera hardware-->
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
-
-
-    <!--Permission required-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- let external entity like play store know that the app uses camera hardware -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" /> <!-- Permission required -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,6 +18,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activity.WelcomeScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -30,28 +33,15 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".Activity.StudentHomeScreenActivity">
-
-        </activity>
-        <activity android:name=".Activity.StudentLoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".Activity.NewQuizDetailsScreen"></activity>
-        <activity android:name=".Activity.AddQuestionScreen">
-        </activity>
+        <activity android:name=".Activity.StudentHomeScreenActivity" />
+        <activity android:name=".Activity.StudentLoginActivity"/>
+        <activity android:name=".Activity.NewQuizDetailsScreen" />
+        <activity android:name=".Activity.AddQuestionScreen" />
         <activity android:name=".Activity.QuizDetailsScreen" />
-        <activity android:name=".Activity.AdminHomeScreen">
-
-
-        </activity>
+        <activity android:name=".Activity.AdminHomeScreen" />
         <activity android:name=".Activity.loginActivity" />
         <activity android:name=".MainActivity" />
 
