--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.WelcomeScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
@@ -39,14 +31,24 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+        <activity android:name=".Activity.WelcomeScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activity.StudentLoginActivity">
+
+        </activity>
+        <activity android:name=".Activity.loginActivity" />
 
         <activity android:name=".Activity.StudentHomeScreenActivity" />
-        <activity android:name=".Activity.StudentLoginActivity"/>
+
         <activity android:name=".Activity.NewQuizDetailsScreen" />
         <activity android:name=".Activity.AddQuestionScreen" />
         <activity android:name=".Activity.QuizDetailsScreen" />
         <activity android:name=".Activity.AdminHomeScreen" />
-        <activity android:name=".Activity.loginActivity" />
         <activity android:name=".MainActivity" />
 
         <meta-data
